--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,9 @@ version '1.0-SNAPSHOT'
 repositories {
   mavenCentral()
 }
+
+dependencies {
+  implementation 'org.apache.commons:commons-lang3:3.12.0'
+  implementation 'com.google.code.gson:gson:2.9.0'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
+}
